--- a/app/src/main/res/layout/content_calendar_tasks.xml
+++ b/app/src/main/res/layout/content_calendar_tasks.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_calendar_tasks"
-        tools:context=".CalendarTasks">
+        tools:context=".ui.CalendarTasks">
 
     <TextView
             android:layout_width="wrap_content"
