--- a/app/src/main/res/layout/activity_calendar_tasks.xml
+++ b/app/src/main/res/layout/activity_calendar_tasks.xml
@@ -9,11 +9,6 @@
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
-    <include
-            layout="@layout/app_bar_calendar_tasks"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
     <android.support.design.widget.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
@@ -22,5 +17,27 @@
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/nav_header_calendar_tasks"
             app:menu="@menu/activity_calendar_tasks_drawer"/>
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:elevation="4dp"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+
+        <FrameLayout
+                android:id="@+id/contentFrame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
