--- a/app/src/main/res/layout/calendar_tasks_fragment.xml
+++ b/app/src/main/res/layout/calendar_tasks_fragment.xml
@@ -5,12 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Hello"/>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/tasks_planing"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -18,6 +16,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_dialog_email"/>
+            app:srcCompat="@android:drawable/ic_input_add"/>
 
 </FrameLayout>
