--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -6,8 +6,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="5dp"
                                     android:orientation="horizontal"
-                                    android:background="@color/colorPrimary"
-                                    app:cardCornerRadius="5dp"
+                                    app:cardCornerRadius="10dp"
                                     android:layout_marginEnd="5dp"
                                     android:padding="5dp">
 
@@ -56,7 +55,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
-                    android:textStyle="italic"/>
+                    android:textStyle="italic"
+                    android:visibility="gone"/>
 
         </LinearLayout>
 
