--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -45,6 +45,14 @@
                     android:textStyle="italic"/>
 
             <TextView
+                    android:id="@+id/groups"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:textColor="#ffffff"
+                    android:textStyle="italic"/>
+
+            <TextView
                     android:id="@+id/lieu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
