--- a/app/src/main/res/layout/activity_calendar_tasks.xml
+++ b/app/src/main/res/layout/activity_calendar_tasks.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                android:background="@android:color/white"
                 android:elevation="4dp"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                 app:popupTheme="@style/AppTheme.PopupOverlay"/>
