--- a/app/src/main/res/layout/student_calendar_app_widget.xml
+++ b/app/src/main/res/layout/student_calendar_app_widget.xml
@@ -1,21 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/widget_margin"
-                android:background="#09C">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <TextView
-            android:id="@+id/appwidget_text"
-            android:layout_width="wrap_content"
+            android:id="@+id/appwidget_date"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
             android:text="@string/appwidget_text"
             android:textColor="#ffffff"
             android:textSize="24sp"
             android:textStyle="bold|italic"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/appwidget_text"
+            android:padding="10dp"
             android:background="#09C"/>
 
-</RelativeLayout>
+    <ListView
+            android:id="@+id/appwidget_event_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"/>
+
+</LinearLayout>
