--- a/app/src/main/res/layout/app_widget_item_event_list.xml
+++ b/app/src/main/res/layout/app_widget_item_event_list.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -20,85 +18,31 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp"
+                android:background="@color/blue">
 
-            <android.support.v7.widget.CardView
+            <TextView
+                    android:id="@+id/item_card_title"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    app:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="@color/blue_light"
-                    android:background="@color/blue">
+                    android:layout_height="wrap_content"/>
 
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+            <TextView
+                    android:id="@+id/item_card_hours_place"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-                    <TextView
-                            android:id="@+id/item_card_title"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+            <TextView
+                    android:id="@+id/item_card_place"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
-                    <TextView
-                            android:id="@+id/item_card_hours_place"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                    <TextView
-                            android:id="@+id/item_card_groups"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
+            <TextView
+                    android:id="@+id/item_card_groups"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
         </LinearLayout>
-
-    </LinearLayout>
-
-    <View
-            android:id="@+id/simple_separation"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:background="#B3B3B3"/>
-
-    <LinearLayout
-            android:id="@+id/month_separation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:orientation="horizontal"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-        <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:background="#B3B3B3"/>
-
-        <TextView
-                android:id="@+id/month"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:gravity="center"
-                android:textColor="#B3B3B3"/>
-
-        <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:background="#B3B3B3"/>
 
     </LinearLayout>
 
