--- a/app/src/main/res/layout/item_tasks_by_day.xml
+++ b/app/src/main/res/layout/item_tasks_by_day.xml
@@ -1,63 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.1"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/jour"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-
-            <TextView
-                    android:id="@+id/jour_semaine"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textAllCaps="true"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="0dp"
+        <TextView
+                android:id="@+id/event_date"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
+                android:gravity="center"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                    android:id="@+id/eventDay"
+            <android.support.v7.widget.CardView
+                    android:id="@+id/card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"/>
+                    android:padding="5dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardBackgroundColor="@color/blue_light"
+                    android:background="@color/blue">
 
-            <View
-                    android:id="@+id/simple_separation"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginStart="20dp"
-                    android:background="#B3B3B3"/>
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                    <TextView
+                            android:id="@+id/hours_start_end"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.3"
+                            android:layout_marginStart="5dp"
+                            android:textColor="#ffffff"/>
+
+                    <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="5dp"
+                            android:layout_weight="0.7"
+                            android:orientation="vertical">
+
+                        <TextView
+                                android:id="@+id/modules"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="#ffffff"
+                                android:textStyle="bold"/>
+
+                        <TextView
+                                android:id="@+id/profs"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="end"
+                                android:textColor="#ffffff"
+                                android:textStyle="italic"/>
+
+                        <TextView
+                                android:id="@+id/groups"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="end"
+                                android:textColor="#ffffff"
+                                android:textStyle="italic"/>
+
+                        <TextView
+                                android:id="@+id/place"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="#ffffff"/>
+
+                        <TextView
+                                android:id="@+id/notes"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="#ffffff"
+                                android:textStyle="italic"
+                                android:visibility="gone"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
     </LinearLayout>
+
+    <View
+            android:id="@+id/simple_separation"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="#B3B3B3"/>
 
     <LinearLayout
             android:id="@+id/month_separation"
