--- a/app/src/main/res/layout/student_calendar_app_widget.xml
+++ b/app/src/main/res/layout/student_calendar_app_widget.xml
@@ -18,7 +18,6 @@
     <ListView
             android:id="@+id/appwidget_event_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@null"/>
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
