--- a/app/src/main/res/layout/item_tasks_by_day.xml
+++ b/app/src/main/res/layout/item_tasks_by_day.xml
@@ -4,6 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
+        android:paddingTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -14,88 +15,81 @@
 
         <TextView
                 android:id="@+id/event_date"
-                android:layout_width="80dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"/>
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+                android:id="@+id/card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:padding="5dp"
+                android:layout_marginEnd="10dp"
+                app:cardCornerRadius="10dp"
+                app:cardBackgroundColor="@color/blue_light">
 
-            <android.support.v7.widget.CardView
-                    android:id="@+id/card"
+            <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    app:cardCornerRadius="5dp"
-                    app:cardBackgroundColor="@color/blue_light"
-                    android:background="@color/blue">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:id="@+id/hours_start_end"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.3"
+                        android:layout_marginStart="5dp"
+                        android:textColor="#ffffff"/>
 
                 <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="0.7"
+                        android:orientation="vertical">
 
                     <TextView
-                            android:id="@+id/hours_start_end"
-                            android:layout_width="0dp"
+                            android:id="@+id/modules"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.3"
-                            android:layout_marginStart="5dp"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"/>
+
+                    <TextView
+                            android:id="@+id/profs"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="end"
+                            android:textColor="#ffffff"
+                            android:textStyle="italic"/>
+
+                    <TextView
+                            android:id="@+id/groups"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="end"
+                            android:textColor="#ffffff"
+                            android:textStyle="italic"/>
+
+                    <TextView
+                            android:id="@+id/place"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:textColor="#ffffff"/>
 
-                    <LinearLayout
-                            android:layout_width="0dp"
+                    <TextView
+                            android:id="@+id/notes"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginEnd="5dp"
-                            android:layout_weight="0.7"
-                            android:orientation="vertical">
-
-                        <TextView
-                                android:id="@+id/modules"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="#ffffff"
-                                android:textStyle="bold"/>
-
-                        <TextView
-                                android:id="@+id/profs"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="end"
-                                android:textColor="#ffffff"
-                                android:textStyle="italic"/>
-
-                        <TextView
-                                android:id="@+id/groups"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="end"
-                                android:textColor="#ffffff"
-                                android:textStyle="italic"/>
-
-                        <TextView
-                                android:id="@+id/place"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="#ffffff"/>
-
-                        <TextView
-                                android:id="@+id/notes"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="#ffffff"
-                                android:textStyle="italic"
-                                android:visibility="gone"/>
-
-                    </LinearLayout>
+                            android:textColor="#ffffff"
+                            android:textStyle="italic"
+                            android:visibility="gone"/>
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 
@@ -103,15 +97,15 @@
             android:id="@+id/simple_separation"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="5dp"
             android:background="#B3B3B3"/>
 
     <LinearLayout
             android:id="@+id/month_separation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:orientation="horizontal"
             android:visibility="gone"
             tools:visibility="visible">
