Updated : design application and widget

--- a/app/src/main/res/layout/app_widget_item_event_list.xml
+++ b/app/src/main/res/layout/app_widget_item_event_list.xml
@@ -23,11 +23,11 @@
                 android:gravity="center"/>
 
         <LinearLayout
+                android:id="@+id/widget_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5dp"
-                android:background="@color/blue">
+                android:padding="5dp">
 
             <TextView
                     android:id="@+id/item_card_hours_place"
