--- a/app/src/main/res/menu/activity_calendar_tasks_drawer.xml
+++ b/app/src/main/res/menu/activity_calendar_tasks_drawer.xml
@@ -5,34 +5,16 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_camera"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="Import"/>
+                android:id="@+id/nav_planning"
+                android:icon="@drawable/ic_planning"
+                android:title="@string/nav_planning"/>
         <item
-                android:id="@+id/nav_gallery"
-                android:icon="@drawable/ic_menu_gallery"
-                android:title="Gallery"/>
+                android:id="@+id/nav_week"
+                android:icon="@drawable/ic_week"
+                android:title="@string/nav_planning"/>
         <item
-                android:id="@+id/nav_slideshow"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="Slideshow"/>
-        <item
-                android:id="@+id/nav_manage"
-                android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
+                android:id="@+id/nav_parameter"
+                android:icon="@drawable/ic_settings"
+                android:title="@string/nav_parameter"/>
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                    android:id="@+id/nav_share"
-                    android:icon="@drawable/ic_menu_share"
-                    android:title="Share"/>
-            <item
-                    android:id="@+id/nav_send"
-                    android:icon="@drawable/ic_menu_send"
-                    android:title="Send"/>
-        </menu>
-    </item>
-
 </menu>
