--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#B0BEC5</color>
+    <color name="colorAccent">#ffffff</color>
 
     <color name="blue_light">#039BE5</color>
     <color name="blue">#3F51B5</color>
     <color name="orange">#F4551E</color>
     <color name="red">#D50000</color>
-    <color name="grey">#616161</color>
+    <color name="grey">#6a7c8d</color>
 </resources>
