--- a/app/src/main/res/menu/activity_calendar_tasks_drawer.xml
+++ b/app/src/main/res/menu/activity_calendar_tasks_drawer.xml
@@ -11,7 +11,13 @@
         <item
                 android:id="@+id/nav_week"
                 android:icon="@drawable/ic_week"
-                android:title="@string/nav_planning"/>
+                android:title="@string/nav_week"/>
+
+        <item
+                android:id="@+id/nav_web"
+                android:icon="@drawable/ic_web"
+                android:title="@string/nav_web"/>
+
         <item
                 android:id="@+id/nav_parameter"
                 android:icon="@drawable/ic_settings"
