--- a/app/src/main/res/layout/activity_calendar_tasks.xml
+++ b/app/src/main/res/layout/activity_calendar_tasks.xml
@@ -9,15 +9,6 @@
         android:fitsSystemWindows="true"
         tools:openDrawer="start">
 
-    <android.support.design.widget.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/nav_header_calendar_tasks"
-            app:menu="@menu/activity_calendar_tasks_drawer"/>
-
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -39,5 +30,20 @@
                 android:layout_height="match_parent"/>
 
     </LinearLayout>
+
+    <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true">
+
+        <android.support.design.widget.NavigationView
+                android:id="@+id/nav_view"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:headerLayout="@layout/nav_header_calendar_tasks"
+                app:menu="@menu/activity_calendar_tasks_drawer"/>
+
+    </RelativeLayout>
 
 </android.support.v4.widget.DrawerLayout>
