--- a/app/src/main/res/layout/calendar_tasks_fragment.xml
+++ b/app/src/main/res/layout/calendar_tasks_fragment.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.RecyclerView
             android:id="@+id/tasks_planing"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@android:color/white"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
