--- a/app/src/main/res/layout/settings_group_item.xml
+++ b/app/src/main/res/layout/settings_group_item.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="14sp"
-            android:inputType="text|number"
+            android:inputType="text"
             android:hint="@string/rename_group_hint"/>
 
 </LinearLayout>
