--- a/app/src/main/res/layout/settings_group_item.xml
+++ b/app/src/main/res/layout/settings_group_item.xml
@@ -2,10 +2,12 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
+        android:paddingBottom="10dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp">
 
@@ -15,10 +17,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp">
 
-        <Switch
+        <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/group_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:thumbTint="@color/blue"
+                app:trackTint="@color/blue_grey"
                 android:gravity="center"/>
 
         <TextView
@@ -32,14 +36,21 @@
 
     </LinearLayout>
 
-    <EditText
-            android:id="@+id/group_new_name"
+    <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="14sp"
-            android:inputType="text"
-            android:hint="@string/rename_group_hint"/>
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            app:passwordToggleDrawable="@drawable/ic_close">
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/group_new_name"
+                style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:hint="@string/rename_group_hint"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
