--- a/app/src/main/res/layout/settings_group_item.xml
+++ b/app/src/main/res/layout/settings_group_item.xml
@@ -19,11 +19,9 @@
 
         <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/group_switch"
+                style="@style/CustomSwitch"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:thumbTint="@color/blue"
-                app:trackTint="@color/blue_grey"
-                android:gravity="center"/>
+                android:layout_height="wrap_content"/>
 
         <TextView
                 android:id="@+id/group_original_name"
