--- a/app/src/main/res/layout/calendar_tasks_fragment.xml
+++ b/app/src/main/res/layout/calendar_tasks_fragment.xml
@@ -20,12 +20,12 @@
             android:visibility="gone"
             android:background="@android:color/white"/>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_action_add"/>
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
+            <!--android:id="@+id/fab"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom|end"-->
+            <!--android:layout_margin="@dimen/fab_margin"-->
+            <!--app:srcCompat="@drawable/ic_action_add"/>-->
 
 </FrameLayout>
