Updated : replace switch group all by button for activate or not all group

--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -133,23 +133,27 @@
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="10dp">
 
-                <com.google.android.material.switchmaterial.SwitchMaterial
-                        android:id="@+id/group_all_switch"
-                        style="@style/CustomSwitch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="false"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:gravity="center_vertical"
+                <Button
+                        android:id="@+id/activated_all_group"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
                         android:text="@string/active_all_groups"
-                        android:textStyle="bold"
-                        android:textSize="14sp"/>
+                        android:textSize="12sp"
+                        android:backgroundTint="@color/colorPrimaryDark"
+                        android:layout_marginEnd="5dp"/>
+
+                <Button
+                        android:id="@+id/desactivated_all_group"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:textSize="12sp"
+                        android:text="@string/desactive_all_groups"
+                        android:backgroundTint="@color/colorPrimaryDark"
+                        android:layout_marginStart="5dp"/>
 
             </LinearLayout>
 
