Added : primary group. It's optional classes.

--- a/app/src/main/res/layout/settings_group_item.xml
+++ b/app/src/main/res/layout/settings_group_item.xml
@@ -47,6 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
+                android:imeOptions="actionDone"
+                android:inputType="text"
                 android:hint="@string/rename_group_hint"/>
 
     </com.google.android.material.textfield.TextInputLayout>
