--- a/app/src/main/res/layout/item_tasks_by_day.xml
+++ b/app/src/main/res/layout/item_tasks_by_day.xml
@@ -48,12 +48,28 @@
                         android:layout_weight="0.7"
                         android:orientation="vertical">
 
-                    <TextView
-                            android:id="@+id/modules"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold"/>
+                    <LinearLayout android:layout_width="match_parent"
+                                  android:layout_height="wrap_content"
+                                  android:orientation="horizontal">
+
+                        <TextView
+                                android:id="@+id/modules"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.5"
+                                android:textColor="#ffffff"
+                                android:textStyle="bold"/>
+
+                        <TextView
+                                android:id="@+id/primary_group"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.5"
+                                android:gravity="end"
+                                android:textColor="#ffffff"
+                                android:textStyle="italic"/>
+
+                    </LinearLayout>
 
                     <TextView
                             android:id="@+id/profs"
