--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/white">
 
     <View
@@ -58,18 +58,34 @@
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textColor="@color/dark_grey"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/settings_group"/>
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:textSize="14sp"
                     android:textColor="@color/medium_grey"
                     android:text="@string/settings_group_legendary"
                     android:layout_marginTop="5dp"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/dark_grey"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/settings_primary_group"/>
+
+            <LinearLayout
+                    android:id="@+id/list_primary_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/white"
+                    android:orientation="vertical"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/dark_grey"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/settings_group"/>
 
             <LinearLayout
                     android:layout_width="wrap_content"
@@ -109,7 +125,7 @@
                     android:layout_marginStart="5dp"/>
 
             <LinearLayout
-                    android:id="@+id/list_Group"
+                    android:id="@+id/list_group"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
